// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should FilmPage render correctly When page loading 1`] = `<Loading />`;

exports[`Should FilmPage render correctly When user authorised 1`] = `
<div>
  <section
    className="movie-card movie-card--full"
    style={
      Object {
        "backgroundColor": "#795433",
      }
    }
  >
    <div
      className="movie-card__hero"
    >
      <div
        className="movie-card__bg"
      >
        <img
          alt="Pulp Fiction"
          src="https://assets.htmlacademy.ru/intensives/javascript-3/film/background/Pulp_Fiction.jpg"
        />
      </div>
      <h1
        className="visually-hidden"
      >
        WTW
      </h1>
      <header
        className="page-header movie-card__head"
      >
        <LogoHeader />
        <UserBlock />
      </header>
      <div
        className="movie-card__wrap"
      >
        <div
          className="movie-card__desc"
        >
          <h2
            className="movie-card__title"
          >
            Pulp Fiction
          </h2>
          <p
            className="movie-card__meta"
          >
            <span
              className="movie-card__genre"
            >
              Crime
            </span>
            <span
              className="movie-card__year"
            >
              1994
            </span>
          </p>
          <div
            className="movie-card__buttons"
          >
            <a
              className="btn btn--play movie-card__button"
              href="/player/1"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="19"
                viewBox="0 0 19 19"
                width="19"
              >
                <use
                  xlinkHref="#play-s"
                />
              </svg>
              <span>
                Play
              </span>
            </a>
            <MyListButton
              id={1}
              isFavorite={false}
            />
            <a
              className="btn movie-card__button"
              href="/films/1/review"
              onClick={[Function]}
            >
              Add review
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="movie-card__wrap movie-card__translate-top"
    >
      <div
        className="movie-card__info"
      >
        <div
          className="movie-card__poster movie-card__poster--big"
        >
          <img
            alt="Pulp Fiction"
            height="327"
            src="https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/Pulp_Fiction.jpg"
            width="218"
          />
        </div>
        <Tabs
          activeTab="Overview"
          film={
            Object {
              "actors": "John Travolta, Uma Thurman, Samuel L. Jackson",
              "bgColor": "#795433",
              "bgImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/background/Pulp_Fiction.jpg",
              "description": "The lives of two mob hitmen, a boxer, a gangster & his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.",
              "director": "Quentin Tarantino",
              "duration": 153,
              "genre": "Crime",
              "id": 1,
              "image": "https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/Pulp_Fiction.jpg",
              "isFavorite": false,
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/pulp-fiction.jpg",
              "previewVideo": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
              "rating": Object {
                "count": 163242,
                "score": 1.5,
              },
              "srcVideo": "http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4",
              "title": "Pulp Fiction",
              "year": 1994,
            }
          }
          handleActiveTab={[Function]}
        />
      </div>
    </div>
  </section>
  <div
    className="page-content"
  >
    <section
      className="catalog catalog--like-this"
    >
      <h2
        className="catalog__title"
      >
        More like this
      </h2>
      <FilmCardList
        films={
          Array [
            Object {
              "actors": "John Travolta, Uma Thurman, Samuel L. Jackson",
              "bgColor": "#795433",
              "bgImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/background/Pulp_Fiction.jpg",
              "description": "The lives of two mob hitmen, a boxer, a gangster & his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.",
              "director": "Quentin Tarantino",
              "duration": 153,
              "genre": "Crime",
              "id": 1,
              "image": "https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/Pulp_Fiction.jpg",
              "isFavorite": false,
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/pulp-fiction.jpg",
              "previewVideo": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
              "rating": Object {
                "count": 163242,
                "score": 1.5,
              },
              "srcVideo": "http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4",
              "title": "Pulp Fiction",
              "year": 1994,
            },
            Object {
              "actors": "John Travolta, Uma Thurman, Samuel L. Jackson",
              "bgColor": "#795433",
              "bgImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/background/Pulp_Fiction.jpg",
              "description": "The lives of two mob hitmen, a boxer, a gangster & his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.",
              "director": "Quentin Tarantino",
              "duration": 153,
              "genre": "Crime",
              "id": 4,
              "image": "https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/Pulp_Fiction.jpg",
              "isFavorite": false,
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/pulp-fiction.jpg",
              "previewVideo": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
              "rating": Object {
                "count": 163242,
                "score": 1.5,
              },
              "srcVideo": "http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4",
              "title": "Pulp Fiction",
              "year": 1994,
            },
            Object {
              "actors": "John Travolta, Uma Thurman, Samuel L. Jackson",
              "bgColor": "#795433",
              "bgImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/background/Pulp_Fiction.jpg",
              "description": "The lives of two mob hitmen, a boxer, a gangster & his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.",
              "director": "Quentin Tarantino",
              "duration": 153,
              "genre": "Crime",
              "id": 7,
              "image": "https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/Pulp_Fiction.jpg",
              "isFavorite": false,
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/pulp-fiction.jpg",
              "previewVideo": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
              "rating": Object {
                "count": 163242,
                "score": 1.5,
              },
              "srcVideo": "http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4",
              "title": "Pulp Fiction",
              "year": 1994,
            },
            Object {
              "actors": "John Travolta, Uma Thurman, Samuel L. Jackson",
              "bgColor": "#795433",
              "bgImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/background/Pulp_Fiction.jpg",
              "description": "The lives of two mob hitmen, a boxer, a gangster & his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.",
              "director": "Quentin Tarantino",
              "duration": 153,
              "genre": "Crime",
              "id": 10,
              "image": "https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/Pulp_Fiction.jpg",
              "isFavorite": false,
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/pulp-fiction.jpg",
              "previewVideo": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
              "rating": Object {
                "count": 163242,
                "score": 1.5,
              },
              "srcVideo": "http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4",
              "title": "Pulp Fiction",
              "year": 1994,
            },
          ]
        }
        onFilmCardClick={[Function]}
      />
    </section>
    <PageFooter />
  </div>
</div>
`;

exports[`Should FilmPage render correctly When user not authorised 1`] = `
<div>
  <section
    className="movie-card movie-card--full"
    style={
      Object {
        "backgroundColor": "#795433",
      }
    }
  >
    <div
      className="movie-card__hero"
    >
      <div
        className="movie-card__bg"
      >
        <img
          alt="Pulp Fiction"
          src="https://assets.htmlacademy.ru/intensives/javascript-3/film/background/Pulp_Fiction.jpg"
        />
      </div>
      <h1
        className="visually-hidden"
      >
        WTW
      </h1>
      <header
        className="page-header movie-card__head"
      >
        <LogoHeader />
        <UserBlock />
      </header>
      <div
        className="movie-card__wrap"
      >
        <div
          className="movie-card__desc"
        >
          <h2
            className="movie-card__title"
          >
            Pulp Fiction
          </h2>
          <p
            className="movie-card__meta"
          >
            <span
              className="movie-card__genre"
            >
              Crime
            </span>
            <span
              className="movie-card__year"
            >
              1994
            </span>
          </p>
          <div
            className="movie-card__buttons"
          >
            <a
              className="btn btn--play movie-card__button"
              href="/player/1"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="19"
                viewBox="0 0 19 19"
                width="19"
              >
                <use
                  xlinkHref="#play-s"
                />
              </svg>
              <span>
                Play
              </span>
            </a>
            <MyListButton
              id={1}
              isFavorite={false}
            />
            
          </div>
        </div>
      </div>
    </div>
    <div
      className="movie-card__wrap movie-card__translate-top"
    >
      <div
        className="movie-card__info"
      >
        <div
          className="movie-card__poster movie-card__poster--big"
        >
          <img
            alt="Pulp Fiction"
            height="327"
            src="https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/Pulp_Fiction.jpg"
            width="218"
          />
        </div>
        <Tabs
          activeTab="Overview"
          film={
            Object {
              "actors": "John Travolta, Uma Thurman, Samuel L. Jackson",
              "bgColor": "#795433",
              "bgImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/background/Pulp_Fiction.jpg",
              "description": "The lives of two mob hitmen, a boxer, a gangster & his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.",
              "director": "Quentin Tarantino",
              "duration": 153,
              "genre": "Crime",
              "id": 1,
              "image": "https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/Pulp_Fiction.jpg",
              "isFavorite": false,
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/pulp-fiction.jpg",
              "previewVideo": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
              "rating": Object {
                "count": 163242,
                "score": 1.5,
              },
              "srcVideo": "http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4",
              "title": "Pulp Fiction",
              "year": 1994,
            }
          }
          handleActiveTab={[Function]}
        />
      </div>
    </div>
  </section>
  <div
    className="page-content"
  >
    <section
      className="catalog catalog--like-this"
    >
      <h2
        className="catalog__title"
      >
        More like this
      </h2>
      <FilmCardList
        films={
          Array [
            Object {
              "actors": "John Travolta, Uma Thurman, Samuel L. Jackson",
              "bgColor": "#795433",
              "bgImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/background/Pulp_Fiction.jpg",
              "description": "The lives of two mob hitmen, a boxer, a gangster & his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.",
              "director": "Quentin Tarantino",
              "duration": 153,
              "genre": "Crime",
              "id": 1,
              "image": "https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/Pulp_Fiction.jpg",
              "isFavorite": false,
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/pulp-fiction.jpg",
              "previewVideo": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
              "rating": Object {
                "count": 163242,
                "score": 1.5,
              },
              "srcVideo": "http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4",
              "title": "Pulp Fiction",
              "year": 1994,
            },
            Object {
              "actors": "John Travolta, Uma Thurman, Samuel L. Jackson",
              "bgColor": "#795433",
              "bgImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/background/Pulp_Fiction.jpg",
              "description": "The lives of two mob hitmen, a boxer, a gangster & his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.",
              "director": "Quentin Tarantino",
              "duration": 153,
              "genre": "Crime",
              "id": 4,
              "image": "https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/Pulp_Fiction.jpg",
              "isFavorite": false,
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/pulp-fiction.jpg",
              "previewVideo": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
              "rating": Object {
                "count": 163242,
                "score": 1.5,
              },
              "srcVideo": "http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4",
              "title": "Pulp Fiction",
              "year": 1994,
            },
            Object {
              "actors": "John Travolta, Uma Thurman, Samuel L. Jackson",
              "bgColor": "#795433",
              "bgImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/background/Pulp_Fiction.jpg",
              "description": "The lives of two mob hitmen, a boxer, a gangster & his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.",
              "director": "Quentin Tarantino",
              "duration": 153,
              "genre": "Crime",
              "id": 7,
              "image": "https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/Pulp_Fiction.jpg",
              "isFavorite": false,
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/pulp-fiction.jpg",
              "previewVideo": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
              "rating": Object {
                "count": 163242,
                "score": 1.5,
              },
              "srcVideo": "http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4",
              "title": "Pulp Fiction",
              "year": 1994,
            },
            Object {
              "actors": "John Travolta, Uma Thurman, Samuel L. Jackson",
              "bgColor": "#795433",
              "bgImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/background/Pulp_Fiction.jpg",
              "description": "The lives of two mob hitmen, a boxer, a gangster & his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.",
              "director": "Quentin Tarantino",
              "duration": 153,
              "genre": "Crime",
              "id": 10,
              "image": "https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/Pulp_Fiction.jpg",
              "isFavorite": false,
              "previewImage": "https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/pulp-fiction.jpg",
              "previewVideo": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
              "rating": Object {
                "count": 163242,
                "score": 1.5,
              },
              "srcVideo": "http://peach.themazzone.com/durian/movies/sintel-1024-surround.mp4",
              "title": "Pulp Fiction",
              "year": 1994,
            },
          ]
        }
        onFilmCardClick={[Function]}
      />
    </section>
    <PageFooter />
  </div>
</div>
`;

exports[`Should FilmPage render correctly With page loading error 1`] = `<ErrorScreen />`;
